# maiq-client

./: .env  .gitmodules  Cargo.toml  build.rs
.github/workflows/: release.yml
export/: 39hhuffdfh.json
src/: app.rs  env.rs  main.rs
src/components/: group.rs  lesson.rs  menu.rs  mod.rs  snapshot_editor.rs
src/view/: default_group.rs  editor.rs  group.rs  lesson.rs  mod.rs  notification.rs  toolbar.rs
