[package]
name = "maiq-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
dotenvy = "0.15.7"
iced = { version = "0.8.0", features = ["tokio"] }
iced_aw = "0.4.1"
include_dir = "0.7.3"
log = "0.4.17"
maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", branch = "optionable-lesson-num", version = "0.3.0" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
